vaious features added till 07-02-25

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <script src="%PUBLIC_URL%/resources/assets/vendor/js/helpers.js"></script>
     <!-- Template customizer & Theme config files -->
     <script src="%PUBLIC_URL%/resources/assets/js/config.js"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 
     <!--
